# qt-cmake-template

./: CMakeLists.txt  README.md
.github/workflows/: ci.yml
cmake/: platform-resource-setup.cmake  qt-setup.cmake
resources/platform/macos/: template.guide  template.json
src/: main.cpp
